<resources>
    <string name="app_name">Week_04</string>
    <string name="TXT_EMAIL">E-Mail</string>
    <string name="TXT_PASSWORD">비밀번호</string>
    <string name="TXT_CHECK_PASSWORD">비밀번호 확인</string>
    <string name="TXT_NAME">이름</string>
    <string name="TXT_PHONE">휴대폰 번호</string>
    <string name="TXT_BIRTHDAY">생년월일</string>
    <string name="TXT_NO_BIRTHDAY_SELECTED">생년월일을 선택하세요.</string>
    <string name="TXT_SELECT">선택</string>
    <string name="TXT_USER_TYPE">회원 유형</string>
    <string name="TXT_SELECT_USER_TYPE">회원 유형 선택</string>
    <string name="TXT_USERTYPE_STUDENT">학생</string>
    <string name="TXT_USERTYPE_PROFESSOR">교수</string>
    <string name="TXT_USERTYPE_EMPLOYEE">교직원</string>
    <string name="TXT_ACCEPT_EULA">최종 사용권 계약서 (EULA) 동의</string>
    <string name="TXT_READ">읽기</string>
    <string name="TXT_ACCEPT_PRIVACY_POLICY">개인정보 수집 및 처리 방침 동의</string>
    <string name="TXT_SIGNUP">회원가입</string>
    <string name="TXT_TITLE_OF_EMPTY_FIELD">공백 필드</string>
    <string name="TXT_CONTENTS_OF_EMPTY_FIELD">모든 필드를 채워주세요.</string>
    <string name="TXT_TITLE_OF_NOT_ACCEPTED_LICENSE">라이센스 동의</string>
    <string name="TXT_CONTENTS_OF_NOT_ACCEPTED_LICENSE">라이센스를 읽고 동의해주세요.</string>
    <string name="TXT_TITLE_OF_INCORRECT_EMAIL_TYPE">잘못된 형식의 E-Mail</string>
    <string name="TXT_CONTENTS_OF_INCORRECT_EMAIL_TYPE">올바른 형식의 E-Mail을 입력하세요.</string>
    <string name="TXT_TITLE_OF_INCORRECT_PASSWORD">위험한 비밀번호</string>
    <string name="TXT_CONTENTS_OF_INCORRECT_PASSWORD">보안을 위해 8자리 이상의 비밀번호를 입력하세요.</string>
    <string name="TXT_TITLE_OF_PASSWORD_MISMATCH">비밀번호 불일치</string>
    <string name="TXT_CONTENTS_OF_PASSWORD_MISMATCH">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
    <string name="TXT_CONTENTS_OF_CONFIRM_SIGN_UP">다음 정보로 가입을 진행하시겠습니까?</string>
    <string name="TXT_YES">예</string>
    <string name="TXT_NO">아니오</string>
    <string name="TXT_OK">확인</string>
</resources>